// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Default large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-18yikff=""
  >
    <img
      data-css-1ba73bf=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/0f792a763ebf08411c7f566079e4adc7?s=400&d=404"
    />
  </div>
</div>
`;

exports[`Storyshots Default light image 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  >
    <img
      data-css-1ba73bf=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://en.gravatar.com/userimage/8399312/b15448d840afacd0eb18102baf788255.jpeg?d=404"
    />
    <div
      data-css-1t1cogi=""
      style={
        Object {
          "backgroundColor": "#BE344B",
        }
      }
    >
      JT
    </div>
  </div>
</div>
`;

exports[`Storyshots Default medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  >
    <img
      data-css-1ba73bf=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/0f792a763ebf08411c7f566079e4adc7?s=400&d=404"
    />
  </div>
</div>
`;

exports[`Storyshots Default small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1o5cejo=""
  >
    <img
      data-css-1ba73bf=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/0f792a763ebf08411c7f566079e4adc7?s=400&d=404"
    />
  </div>
</div>
`;

exports[`Storyshots Default xLarge 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1j3ote4=""
  >
    <img
      data-css-1ba73bf=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/0f792a763ebf08411c7f566079e4adc7?s=400&d=404"
    />
  </div>
</div>
`;

exports[`Storyshots Default xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-r2oqze=""
  >
    <img
      data-css-1ba73bf=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/0f792a763ebf08411c7f566079e4adc7?s=400&d=404"
    />
  </div>
</div>
`;

exports[`Storyshots Using Initials % Special Characters 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  >
    <div
      data-css-1t1cogi=""
      style={
        Object {
          "backgroundColor": "#1F964E",
        }
      }
    >
      %C
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Anakin Skywalker 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  >
    <div
      data-css-1t1cogi=""
      style={
        Object {
          "backgroundColor": "#2D4E82",
        }
      }
    >
      AS
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Budapest Skywalker 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  >
    <div
      data-css-1t1cogi=""
      style={
        Object {
          "backgroundColor": "#49897C",
        }
      }
    >
      BS
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Carlos Organa 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  >
    <div
      data-css-1t1cogi=""
      style={
        Object {
          "backgroundColor": "#1F964E",
        }
      }
    >
      CO
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Dennis Pimenta 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  >
    <div
      data-css-1t1cogi=""
      style={
        Object {
          "backgroundColor": "#BE344B",
        }
      }
    >
      DP
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Diz Blau 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  >
    <div
      data-css-1t1cogi=""
      style={
        Object {
          "backgroundColor": "#2D4E82",
        }
      }
    >
      DB
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Harry Potter 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  >
    <div
      data-css-1t1cogi=""
      style={
        Object {
          "backgroundColor": "#49897C",
        }
      }
    >
      HP
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Obi-Wan Kenobi 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  >
    <div
      data-css-1t1cogi=""
      style={
        Object {
          "backgroundColor": "#49897C",
        }
      }
    >
      OK
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Peia Organa 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  >
    <div
      data-css-1t1cogi=""
      style={
        Object {
          "backgroundColor": "#49897C",
        }
      }
    >
      PO
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Single 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  >
    <div
      data-css-1t1cogi=""
      style={
        Object {
          "backgroundColor": "#076F84",
        }
      }
    >
      SI
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Uy Marley 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  >
    <div
      data-css-1t1cogi=""
      style={
        Object {
          "backgroundColor": "#49897C",
        }
      }
    >
      UM
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials alpha-order names w/ varied colors 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div>
    <div
      data-css-1m7zcb4=""
    >
      <img
        data-css-1ba73bf=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        data-css-1t1cogi=""
        style={
          Object {
            "backgroundColor": "#49897C",
          }
        }
      >
        AT
      </div>
    </div>
    <div
      data-css-1m7zcb4=""
    >
      <img
        data-css-1ba73bf=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        data-css-1t1cogi=""
        style={
          Object {
            "backgroundColor": "#49897C",
          }
        }
      >
        AS
      </div>
    </div>
    <div
      data-css-1m7zcb4=""
    >
      <img
        data-css-1ba73bf=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        data-css-1t1cogi=""
        style={
          Object {
            "backgroundColor": "#2D4E82",
          }
        }
      >
        AA
      </div>
    </div>
    <div
      data-css-1m7zcb4=""
    >
      <img
        data-css-1ba73bf=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        data-css-1t1cogi=""
        style={
          Object {
            "backgroundColor": "#076F84",
          }
        }
      >
        AA
      </div>
    </div>
    <div
      data-css-1m7zcb4=""
    >
      <img
        data-css-1ba73bf=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        data-css-1t1cogi=""
        style={
          Object {
            "backgroundColor": "#BE344B",
          }
        }
      >
        AA
      </div>
    </div>
    <div
      data-css-1m7zcb4=""
    >
      <img
        data-css-1ba73bf=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        data-css-1t1cogi=""
        style={
          Object {
            "backgroundColor": "#49897C",
          }
        }
      >
        AS
      </div>
    </div>
    <div
      data-css-1m7zcb4=""
    >
      <img
        data-css-1ba73bf=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        data-css-1t1cogi=""
        style={
          Object {
            "backgroundColor": "#9A171B",
          }
        }
      >
        BH
      </div>
    </div>
    <div
      data-css-1m7zcb4=""
    >
      <img
        data-css-1ba73bf=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        data-css-1t1cogi=""
        style={
          Object {
            "backgroundColor": "#49897C",
          }
        }
      >
        BH
      </div>
    </div>
    <div
      data-css-1m7zcb4=""
    >
      <img
        data-css-1ba73bf=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        data-css-1t1cogi=""
        style={
          Object {
            "backgroundColor": "#2D4E82",
          }
        }
      >
        BO
      </div>
    </div>
    <div
      data-css-1m7zcb4=""
    >
      <img
        data-css-1ba73bf=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        data-css-1t1cogi=""
        style={
          Object {
            "backgroundColor": "#076F84",
          }
        }
      >
        BO
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials empty name, no src 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  >
    
  </div>
</div>
`;

exports[`Storyshots Using Initials error-out image src, with name 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  >
    <img
      data-css-1ba73bf=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://jaketrent.com/fake.jpg"
    />
    <div
      data-css-1t1cogi=""
      style={
        Object {
          "backgroundColor": "#49897C",
        }
      }
    >
      BD
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials null name, no src 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  />
</div>
`;

exports[`Storyshots Using Initials with invalid gravatar image 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  >
    <img
      data-css-1ba73bf=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/invalidhash?d=tmp&d=404"
    />
    <div
      data-css-1t1cogi=""
      style={
        Object {
          "backgroundColor": "#49897C",
        }
      }
    >
      AT
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials with invalid gravatar image, no name 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    data-css-1m7zcb4=""
  >
    <img
      data-css-1ba73bf=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/invalidhash?d=tmp&d=404"
    />
  </div>
</div>
`;
